[package]
name = "tor-check"
version = "0.2.0"
edition = "2021"
authors = ["Joffrey Darcq <j-off@live.fr>"]
description = "Extend your favorite HTTP client with a Tor verification feature"
readme = "README.md"
repository = "https://github.com/Joffr3y/tor_check"
license = "MIT"
keywords = ["tor", "http", "request", "privacy", "anonymity"]
categories = ["web-programming::http-client"]

[features]
default = ["reqwest"]
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12.24", optional = true, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.1.4", optional = true, features = ["json"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["socks"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "3.1.4", features = ["socks-proxy"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
